# marine-anomaly

./: .gitattributes  .gitignore  .gitmodules  Architecture.drawio  incident_anomaly_labels.ipynb
AISVesselTracks/: analysis.ipynb  analysis_danish.ipynb  analysis_danish_stage_2.ipynb
AISVesselTracks/info/: ABNORMAL_TRAJECTORY_DETAILED_ANALYSIS.md  ANALYSIS_SUMMARY.md  DATA_DISCREPANCY_ANALYSIS.md  INDEX_ANALYSIS_COMPLETE.md  README_ANALYSIS.md
dataset/GNSS/: eda_gnss.ipynb  train_gnss.ipynb
docs/: gnss.mermaid  reasearch_papers.mermaid  vis.mermaid
piraeus_analysis/: dataset  eval_notebook.ipynb  getData.py  info.md  post-preprocess.py  post-process-getbounds.py  post-process.ipynb  preprocess.py  spoofing.ipynb  train eval.ipynb  train.ipynb  train_v2.ipynb  train_v3.ipynb  train_v3_cont.ipynb  train_v4_TS2Vec.ipynb  train_v4_TS2Vec_blackout.ipynb  train_v5.ipynb  train_v6.ipynb  train_v7.ipynb  unprocessed_parquet_conversion.ipynb  unprocessed_unique_test.ipynb  unprocessed_v2_after parquet conversion.ipynb  unprocessed_v3_after_clustering_HDBScan.ipynb  unprocessed_v4_after_clustering_TRACLUS.ipynb  unprocessed_v5_after_heatmap.ipynb  unprocessed_v6_after_unique_vessel.ipynb  unzip.ipynb
piraeus_analysis/checkpoints/: vae_epoch10_1.pt  vae_epoch1_1.pt  vae_epoch2_1.pt  vae_epoch3_1.pt  vae_epoch4_1.pt  vae_epoch5_1.pt  vae_epoch6_1.pt  vae_epoch7_1.pt  vae_epoch8_1.pt  vae_epoch9_1.pt
piraeus_analysis/checkpoints_1/: vae_epoch16.pt  vae_epoch17.pt  vae_epoch18.pt  vae_epoch19.pt  (+5 more)
piraeus_analysis/cpp_version/: CMakeLists.txt  preprocess.c++  preprocess.cpp
(+67 files in other folders)
